Mac: Elide bookmark subfolders consistently when opened via the mainMenu

bookmark_menu_bridge.mm is used to show bookmarks in the macOS main
menu bar. It currently elides bookmark _titles_ to a custom width before
sending to the Cocoa NSMenuItem. However, bookmark subfolder labels are
not elided until NSMenuItem itself decides to do the elision, which is
done with a much wider width.

Make the widths consistent. This CL adopts the smaller width; used for
bookmark titles. We could also drop our custom elision width and just
let AppKit do it, but that's not the current intention.

Bug: 869270
Change-Id: I2fe86d4e2c8e9d2256fa8b6bdabfa4c75c75faaf
Reviewed-on: https://chromium-review.googlesource.com/1156188
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582774}
Former-commit-id: 33e3f98ab780c3caf0de5fe49d79150a30ab5675